[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "Ophyd Device definitions for LCLS Beamline components"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies", "optional-dependencies",]
keywords = []
name = "pcdsdevices"
requires-python = ">=3.9"
[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[tool.setuptools_scm]
write_to = "pcdsdevices/_version.py"

[tool.flake8]
exclude = "pcdsdevices/areadetector/*,docs/*,versioneer.py"
per-file-ignores = "\npcdsdevices/signal.py:E402"

[project.entry-points."happi.containers"]
pcdsdevices = "pcdsdevices.happi.containers"

[project.entry-points."typhos.ui"]
pcdsdevices = "pcdsdevices.ui:path"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pcdsdevices",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"
