[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Programming Language :: Python :: 3",]
description = "Ophyd Device definitions for LCLS Beamline components"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "pcdsdevices"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE.md"

[project.scripts]

[tool.setuptools_scm]
write_to = "pcdsdevices/_version.py"

[project.entry-points."happi.containers"]
pcdsdevices = "pcdsdevices.happi.containers"

[project.entry-points."typhos.ui"]
pcdsdevices = "pcdsdevices.ui:path"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pcdsdevices*", ]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"
